<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.android.todoplanner.presentation.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_editFragment"
            app:destination="@id/editFragment" />
        <action
            android:id="@+id/action_mainFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.android.todoplanner.presentation.EditFragment"
        android:label="@string/edit_fragment_label_edit"
        tools:layout="@layout/fragment_edit">
        <argument
            android:name="event_uid"
            app:argType="long" />
        <argument
            android:name="new_event"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.android.todoplanner.presentation.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_editFragment"
            app:destination="@id/editFragment" />
        <argument
            android:name="event_uid"
            app:argType="long" />
    </fragment>

</navigation>